--- a/WikiParez/Views/Wiki/Index.cshtml
+++ b/WikiParez/Views/Wiki/Index.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "WIKI Pařez";
 }
 
 @if (Model != null){
@@ -19,7 +19,11 @@
             }
         </main>
         <aside style="min-width: 200px; padding: 1rem; background-color: #f5f5f5; border-radius: 8px;">
-            <h2>Info</h2>
+            <figure style="margin: 0; text-align: center;">
+                <img id="imagetest" src="/Images/@Model.Images[Model.image_id]" alt="image" style="width: 100%; max-width: 100%;"/>
+                <figcaption style="margin-top: 0.5rem; font-weight:bold;">@Model.Image_titles[Model.image_id]</figcaption>
+            </figure>
+            <h2 style="text-align: center;">Info</h2>
             <table>
                 @foreach (var data in Model.Metadata)
                 {
