images and cycling through them

--- a/WikiParez/Views/Home/Index.cshtml
+++ b/WikiParez/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Vítejte</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">Pařez</a>.</p>
+    <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
+    <h3>Nejnovější články: </h3>
+    <p>Více o <a href="/beacon_parez">Beaconu</a>.</p>
+    <p>Více o <a href="/mi_ulice_schodova">ulici Schodové</a>.</p>
+    <p>Více o <a href="/mi_beetroot_farma">Beetroot farmě</a>.</p>
+    <p>Více o <a href="/mi_rudakuv_dum">Ruďákově domě</a>.</p>
 </div>
