--- a/WikiParez/Views/Home/Index.cshtml
+++ b/WikiParez/Views/Home/Index.cshtml
@@ -5,6 +5,8 @@
 <div class="text-center">
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější články: </h3>
+    <p>Více o <a href="/mi_schodiste_tt">Schodišti TT</a>.</p>
+    <p>Více o <a href="/oranjestadu">Oranjestadu</a>.</p>
     <p>Více o <a href="/beacon_parez">Beaconu</a>.</p>
     <p>Více o <a href="/mi_ulice_schodova">ulici Schodové</a>.</p>
     <p>Více o <a href="/mi_beetroot_farma">Beetroot farmě</a>.</p>
