--- a/WikiParez/Views/Home/Index.cshtml
+++ b/WikiParez/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější články: </h3>
+    <p>Více o <a href="/mi_byt_chudaka_kterej_nema_rad_kluby">Bytu chudáka, kterej nemá rád kluby</a>.</p>
     <p>Více o <a href="/mi_schodiste_tt">Schodišti TT</a>.</p>
     <p>Více o <a href="/mi_oranjestad">Oranjestadu</a>.</p>
     <p>Více o <a href="/beacon_parez">Beaconu</a>.</p>
