--- a/WikiParez/Views/Wiki/Index.cshtml
+++ b/WikiParez/Views/Wiki/Index.cshtml
@@ -19,10 +19,10 @@
                 </div>
             }
         </main>
-        <aside style="min-width: 200px; padding: 1rem; background-color: #f5f5f5; border-radius: 8px;">
+        <aside style="min-width: 200px; padding: 1rem; background-color: #f5f5f5; border-radius: 8px; max-width: 300px;">
             <figure style="margin: 0; text-align: center; position: relative;">
                 <img id="wikiimage" src="/Images/@Model.Images[Model.image_id]" alt="image" style="width: 100%; max-width: 100%;"/>
-                <figcaption id="imagetitle" style="margin-top: 0.5rem; font-weight:bold;">@Model.Image_titles[Model.image_id]</figcaption>
+                <figcaption id="imagetitle" style="margin-top: 0.5rem; font-weight:bold;">@Html.Raw(@Model.Image_titles[Model.image_id])</figcaption>
                 @if (Model.image_count() > 1)
                 {
                     <button onclick="changeImage(-1)" class="btn btn-sm" style="background-color: white; position: absolute; top: 50%; left: 10px; transform: translateY(-50%);">‹</button>
@@ -48,15 +48,15 @@
     @section Scripts {
         <script>
             const imageCount = @Model.image_count();
+            console.log("Image count: " + imageCount);
             let currentImageID = @Model.image_id;
             function changeImage(direction){
                 currentImageID = (currentImageID + direction + imageCount)%imageCount;
                 document.getElementById("wikiimage").src = "/Images/" + images[currentImageID];
-                document.getElementById("imagetitle").innerText = titles[currentImageID];
+                document.getElementById("imagetitle").innerHTML = titles[currentImageID];
             }
             const images = @Html.Raw(JsonSerializer.Serialize(Model.Images));
             const titles = @Html.Raw(JsonSerializer.Serialize(Model.Image_titles));
-
         </script>
     }
 }
