--- a/WikiParez/Views/Game/HigherLower.cshtml
+++ b/WikiParez/Views/Game/HigherLower.cshtml
@@ -66,7 +66,7 @@
 </style>
 
 @if (Model != null){
-    <form method="post" asp-controller="Wiki" asp-action="Choose">
+    <form method="post" asp-controller="Game" asp-action="ChooseHigherLower">
         <input type="hidden" name="slug1" value="@ViewBag.Slug1"></input>
         <input type="hidden" name="slug2" value="@ViewBag.Slug2"></input>
         <input type="hidden" name="highScore" value="@ViewBag.highScore"></input>
