--- a/WikiParez/Views/Wiki/Index.cshtml
+++ b/WikiParez/Views/Wiki/Index.cshtml
@@ -55,10 +55,12 @@
                         <td>@Html.Raw(Model.Metadata[key])</td>
                     </tr>
                 }
-                <tr>
-                    <td style="padding-right: 0.5rem;"><strong>Plocha:</strong></td>
-                    <td>@Model.area blok²</td>
-                </tr>
+                @if (Model.area > 0){
+                    <tr>
+                        <td style="padding-right: 0.5rem;"><strong>Plocha:</strong></td>
+                        <td>@Model.area blok²</td>
+                    </tr>
+                }
                 @if (Model.numberOfRooms > 0){
                     <tr>
                         <td style="padding-right: 0.5rem;"><strong>Počet místností:</strong></td>
