--- a/WikiParez/Views/Shared/_Layout.cshtml
+++ b/WikiParez/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                         <li class="nav-item"></li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="Bordering">Sousedí to?</a>
                         </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="List" asp-action="List">Seznam</a>
+                        </li>
                     </ul>
                     <form class="d-flex" asp-controller="Wiki" asp-action="Search" method="get">
                         <input class="form-control me-2" type="search" name="query" placeholder="Hledat stránku..." aria-label="Search">
