coming closergit add *

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,11 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#434 - 04/07/25 <a href="/mi_promena">Proměna</a></li>
+        <li>#433 - 04/07/25 <a href="/mi_strop">Strop</a></li>
+        <li>#432 - 04/07/25 <a href="/mi_komin">Komín</a></li>
+        <li>#431 - 04/07/25 <a href="/mi_katedra">Katedra</a></li>
+        <li>#430 - 04/07/25 <a href="/mi_stopa">Stopa</a></li>
         <li>#429 - 03/07/25 <a href="/mi_pramice">Pramice</a></li>
         <li>#428 - 30/06/25 <a href="/mi_hnizdo">Hnízdo</a></li>
         <li>#427 - 30/06/25 <a href="/mi_kazeta">Kazeta</a></li>
