--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,11 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#439 - 06/07/25 <a href="/mi_smycka">Smyčka</a></li>
+        <li>#438 - 06/07/25 <a href="/mi_gate">Gatě</a></li>
+        <li>#437 - 06/07/25 <a href="/mi_audit">Audit</a></li>
+        <li>#436 - 06/07/25 <a href="/mi_karotka">Karotka</a></li>
+        <li>#435 - 06/07/25 <a href="/mi_namesticko">Náměstíčko</a></li>
         <li>#434 - 04/07/25 <a href="/mi_promena">Proměna</a></li>
         <li>#433 - 04/07/25 <a href="/mi_strop">Strop</a></li>
         <li>#432 - 04/07/25 <a href="/mi_komin">Komín</a></li>
