nahodny parezle a par novych stranek a misntosti

--- a/WikiParez/Views/Home/New.cshtml
+++ b/WikiParez/Views/Home/New.cshtml
@@ -6,6 +6,29 @@
     <h1 class="display-4">Vítejte na Pařez Wiki!</h1>
     <h3>Nejnovější místnosti: </h3>
     <ul>
+        <li>#462 - 07/07/25 <a href="/mi_silhanek">Šilhánek</a></li>
+        <li>#461 - 07/07/25 <a href="/mi_wc_mesita">WC Mešita</a></li>
+        <li>#460 - 07/07/25 <a href="/mi_bumblebee">Bumblebee</a></li>
+        <li>#459 - 07/07/25 <a href="/mi_chrchel">Chrchel</a></li>
+        <li>#458 - 07/07/25 <a href="/mi_povodi">Povodí</a></li>
+        <li>#457 - 07/07/25 <a href="/mi_sopel">Sopel</a></li>
+        <li>#456 - 07/07/25 <a href="/mi_sralkovsky_rybnik">Srálkovský Rybník</a></li>
+        <li>#455 - 07/07/25 <a href="/mi_hluboka">Hluboká</a></li>
+        <li>#454 - 07/07/25 <a href="/mi_za_vrbou">Za Vrbou</a></li>
+        <li>#453 - 07/07/25 <a href="/mi_u_vrby">U Vrby</a></li>
+        <li>#452 - 07/07/25 <a href="/mi_u_petra">U Petra</a></li>
+        <li>#451 - 07/07/25 <a href="/mi_josef">Josef</a></li>
+        <li>#450 - 07/07/25 <a href="/mi_po_hlave_dolu">Po Hlavě Dolů</a></li>
+        <li>#449 - 07/07/25 <a href="/mi_rybarna">Rybárna</a></li>
+        <li>#448 - 07/07/25 <a href="/mi_pod_vrbou">Pod Vrbou</a></li>
+        <li>#447 - 07/07/25 <a href="/mi_stavidlo">Stavidlo</a></li>
+        <li>#446 - 07/07/25 <a href="/mi_micha">Mícha</a></li>
+        <li>#445 - 07/07/25 <a href="/mi_mozek">Mozek</a></li>
+        <li>#444 - 07/07/25 <a href="/mi_vedomi">Vědomí</a></li>
+        <li>#443 - 07/07/25 <a href="/mi_svihak">Švihák</a></li>
+        <li>#442 - 07/07/25 <a href="/mi_zuch">Žuch</a></li>
+        <li>#441 - 07/07/25 <a href="/mi_kronika">Kronika</a></li>
+        <li>#440 - 07/07/25 <a href="/mi_puch">Puch</a></li>
         <li>#439 - 06/07/25 <a href="/mi_smycka">Smyčka</a></li>
         <li>#438 - 06/07/25 <a href="/mi_gate">Gatě</a></li>
         <li>#437 - 06/07/25 <a href="/mi_audit">Audit</a></li>
