--- a/WikiParez/Views/Game/Parezle/Parezle.cshtml
+++ b/WikiParez/Views/Game/Parezle/Parezle.cshtml
@@ -69,6 +69,8 @@
         justify-content: center;
         max-width: 100px;
         width: 100%;
+        margin-right: 5px;
+        margin-left: 5px;
     }
     .icon {
         font-size: clamp(1.5rem, 5vw, 3rem);
@@ -79,22 +81,19 @@
         line-height: 1;
     }
     .subdiv-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
         margin-top: 20px;
     }
 
     .wrongsubdiv, .correctsubdiv {
-        flex: 1 1 120px; /* Flexible, shrinks to 120px */
         color: white;
         border-radius: 8px;
         height: 40px;
+        margin-bottom: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
         font-size: large;
-        word-break: break-word; /* Helps if the text is too long */
+        word-break: break-word;
     }
 
     .wrongsubdiv {
@@ -107,7 +106,7 @@
 </style>
 
 <div class="game-board" id="game-board">
-    <div style="display: flex; height: 100%; padding: 20px;">
+    <div style="display: flex; height: 100%; width: 100%; padding: 20px;">
         <div style="padding-top: 50px; padding-right: 30px; flex: 1; display: flex; flex-direction: column; justify-content: flex-start; gap: 10px;">
             <div id="guessed">
                 <div class="room-rectangle">
