--- a/WikiParez/Views/Shared/_Layout.cshtml
+++ b/WikiParez/Views/Shared/_Layout.cshtml
@@ -29,25 +29,33 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Domů</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="New">Nové Místnosti</a>
-                        </li>
-                        <li class="nav-item">
+                        <li class="nav-item"></li>
                             <a class="nav-link text-dark" asp-area="" asp-controller="Wiki" asp-action="Random">Náhodný</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="HigherLower">Větší nebo menší</a>
+                        @if (false){
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="New">Nové Místnosti</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="HigherLower">Větší nebo menší</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="ParezleMenu">PAŘEZLE</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="Bordering">Sousedí to?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="List" asp-action="List">Seznam</a>
+                            </li>
+                        }
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Wiki" asp-action="Games">Hry</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="ParezleMenu">PAŘEZLE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Game" asp-action="Bordering">Sousedí to?</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="List" asp-action="List">Seznam</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Wiki" asp-action="Other">Ostatní</a>
                         </li>
                     </ul>
                     <form class="d-flex" asp-controller="Wiki" asp-action="Search" method="get">
